--- a/projects/xiaotang/xiaotang.html
+++ b/projects/xiaotang/xiaotang.html
@@ -10,12 +10,13 @@
         <!-- CSS style links -->
         <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/base.css">
+        <link rel="stylesheet" href="css/gallery.css">
         <link rel="stylesheet" href="projects/project_base.css">
-        <link rel="stylesheet" href="projects/xiaotang/xiaotang.css">
 
         <!-- Javascript animation -->
         <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
         <script src="js/base.js" type="text/javascript"></script>
+        <script src="js/gallery.js" type="text/javascript"></script>
     </head>
     <!-- End of head descriptor -->
 
@@ -24,30 +25,39 @@
         <a href="#" id="logo"></a>
 
         <section class="leftpanel">
-            <div class="fullimg">
-            </div>
-            <div class="content">
-                <h1> XiaoTang </h1>
-                <p> This was a collaborative mobile app development with couple friends in medical school. The original idea was to develop an mobile application that allows diebetic patients to keep track of their daily blood sugar level. The app will further analyze the blood sugar level trend and display suggestions on how to improve/maintain current status. Primary target was Taiwan and China market.</p>
+            <div class="showcase">
+                <div class="fullimg">
+                </div>
+
+                <div class="content-trigger">
+                </div>
+               <div class="content">
+                    <h1> XiaoTang </h1>
+                    <p> This was a collaborative mobile app development with couple friends in medical school. The original idea was to develop an mobile application that allows diebetic patients to keep track of their daily blood sugar level. The app will further analyze the blood sugar level trend and display suggestions on how to improve/maintain current status. Primary target was Taiwan and China market.</p>
+                </div>
             </div>
 
-            <div class="gallery">
-                <!-- Placeholder for images -->
-                <div class="img"></div>
-                <div class="img"></div>
-                <div class="img"></div>
-                <div class="img"></div>
-                <div class="img"></div>
-                <div class="img"></div>
-                <div class="img"></div>
-                <div class="img"></div>
-                <div class="img"></div>
-                <div class="img"></div>
-                <div class="img"></div>
-                <div class="img"></div>
-                <div class="img"></div>
-                <div class="img"></div>
-            </div>
+
+            <section class="gallery-wrapper">
+                <div class="gallery">
+                    <div class="gallery-img"><img src="projects/xiaotang/LayoutEnterP1.jpg"></div>
+                    <div class="gallery-img"><img src="projects/xiaotang/LayoutEnterP2.jpg"></div>
+                    <div class="gallery-img"><img src="projects/xiaotang/LayoutFirstUseHI.jpg"></div>
+                    <div class="gallery-img"><img src="projects/xiaotang/LayoutFirstUsePassword.jpg"></div>
+                    <div class="gallery-img"><img src="projects/xiaotang/LayoutFirstUsePI.jpg"></div>
+                    <div class="gallery-img"><img src="projects/xiaotang/LayoutGraphDayP.jpg"></div>
+                    <div class="gallery-img"><img src="projects/xiaotang/LayoutGraphWeekP.jpg"></div>
+                    <div class="gallery-img"><img src="projects/xiaotang/LayoutHistoryCalenderMP.jpg"></div>
+                    <div class="gallery-img"><img src="projects/xiaotang/LayoutHistoryCalenderYP.jpg"></div>
+                    <div class="gallery-img"><img src="projects/xiaotang/LayoutHistorySelectedDateP.jpg"></div>
+                    <div class="gallery-img"><img src="projects/xiaotang/LayoutMenuP.jpg"></div>
+                    <div class="gallery-img"><img src="projects/xiaotang/LayoutNewRecordP.jpg"></div>
+                    <div class="gallery-img"><img src="projects/xiaotang/LayoutProfileP.jpg"></div>
+                    <div class="gallery-img"><img src="projects/xiaotang/LayoutSettingHealthP.jpg"></div>
+                    <div class="gallery-img"><img src="projects/xiaotang/LayoutSettingPrivacyP1.jpg"></div>
+                    <div class="gallery-img"><img src="projects/xiaotang/LayoutSettingPrivacyP2.jpg"></div>
+                </div>
+            </section>
         </section>
 
         <section class="rightpanel">
